--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "@pixi/events": "^6.3.0",
     "pixi-spine": "^3",
     "pixi.js": "^6"
   }
